--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
               <div class="hero-stats" data-aos="fade-up" data-aos-delay="200">
                 <div class="stat-item">
-                  <span></span><span class="purecounter" data-purecounter-start="1" data-purecounter-end="7" data-purecounter-duration="4">30+</span>
+                  <span><span class="purecounter" data-purecounter-start="1" data-purecounter-end="7" data-purecounter-duration="5">0</span>+</span>
                   <span class="stat-label">Years Experience</span>
                 </div>
                 <div class="stat-item">
