--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="education-section">
               <div class="section-header">
                 <h2><i class="bi bi-mortarboard"></i> Academic Excellence</h2>
-                <p class="section-subtitle">Learning is life long journey. Studing distance/online educaiton while entering the professional field.</p>
+                <p class="section-subtitle">Learning is life long journey. Studying distance/online educaiton while entering the professional field.</p>
               </div>
 
               <div class="education-timeline">
@@ -323,7 +323,7 @@
                       <span class="year">2013 - 2017</span>
                     </div>
                     <h4 class="institution">Yangon University (Distance) </h4>
-                    <p>Studied Four years Bechelor e online program at University of Yangon, distance education.</p>
+                    <p>Studied Four years Bechelor e-online program at University of Yangon, distance education.</p>
                   </div>
                 </div>
 
@@ -347,7 +347,7 @@
                       <span class="year">2015-Present</span>
                     </div>
                     <h4 class="institution">Multi IT Institute</h4>
-                    <p>Keep upgrading Self-Human operation system with studing with including A+,NE+,Linux,MCSA,CCNA,Tableu,Cloud.</p>
+                    <p>Keep upgrading Self-Human operation system by studying with including A+,NE+,Linux,MCSA,CCNA,Tableu,Cloud.</p>
                   </div>
                 </div>
               </div>
