--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                       <h3>B.Sc Physics</h3>
                       <span class="year">2013 - 2017</span>
                     </div>
-                    <h4 class="institution">Yangon University (Distance) </h4>
+                    <h4 class="institution">Yangon University (Distance education) </h4>
                     <p>Studied Four years Bechelor e-online program at University of Yangon, distance education.</p>
                   </div>
                 </div>
