--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
 
               <div class="social-links" data-aos="fade-up" data-aos-delay="400">                
-                <a href="https://www.linkedin.com/in/saw-sar-ka-baw-say/"><i class="bi bi-linkedin"></i></a>            
+                <a href="https://www.linkedin.com/in/saw-sar-ka-baw-say/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>            
               </div>
             </div>
           </div>
@@ -856,7 +856,7 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Saw Sar Ka Baw Say @ Edwin</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">        
-        <a href="https://www.linkedin.com/in/saw-sar-ka-baw-say/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/saw-sar-ka-baw-say/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
