--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Saw Sar Ka Baw Say @ Edwin </title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>Saw Sar Ka Baw Say @ Edwin | Portfolio </title>
+  <meta name="description" content="The professional portfolio of Saw Sar Ka Baw Say aka Edwin, an IT Infrastructure who loves to use Technology make people lives easier.">
+  <meta name="keywords" content="Saw Sar Ka Baw Say, Edwin">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
