--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Saw Sar Ka Baw Say @ Edwin | Portfolio </title>
   <meta name="description" content="The professional portfolio of Saw Sar Ka Baw Say aka Edwin, an IT Infrastructure who loves to use Technology make people lives easier.">
   <meta name="keywords" content="Saw Sar Ka Baw Say, Edwin">
+  <meta name="google-site-verification" content="g5z8N0NXHIU1oIe1CDqU_8T1AC49zjaDYHfYbFX6Ht8" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
