--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
               <div class="intro">
-                <h2>Hi, I'm Edwin - an innovative Transformer</h2>
+                <h2>Hi, I'm Saw Sar Ka Baw Say (Edwin) - an Digital Transformer</h2>
                 <p>A graduate of bachelor of science in Physic and IT Diploma at the University Of Yangon. In every projects, I writing the codes but I don't understand them :-) </p>
               </div>
 
