--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <div class="col-lg-5" data-aos="fade-right" data-aos-delay="200">
             <div class="profile-image-wrapper">
               <div class="profile-image">
-                <img src="assets/img/profile/my-photo.jpg" alt="Profile" class="img-fluid">
+                <img src="assets/img/profile/my-photo.jpg" alt="A profile photo of Saw Sar Ka Baw Say" class="img-fluid">
               </div>
               <div class="signature-section">
                 <img src="assets/img/misc/signature-1.webp" alt="Signature" class="signature">
