--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Saw Sar Ka Baw Say",
+  "url": "https://www.edwin-sskbs.asia/",
+  "image": "https://www.edwin-sskbs.asia/assets/img/profile/my-photo.jpg",
+  "sameAs": [
+    "https://www.linkedin.com/in/saw-sar-ka-baw-say/"
+  ],
+  "jobTitle": "IT Infrastructure Lead",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Roche"
+  }  
+}
+</script>
 </head>
 
 <body class="index-page">
