--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                       <span class="year">2015-Present</span>
                     </div>
                     <h4 class="institution">Multi IT Institute</h4>
-                    <p>Keep upgrading Self-Human operation system by studying with including A+,NE+,Linux,MCSA,CCNA,Tableu,Cloud.</p>
+                    <p>Keep upgrading Self-Human operation system by studying with including A+,NE+,Linux,MCSA,CCNA,Tableau,Cloud.</p>
                   </div>
                 </div>
               </div>
