--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
           <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
               <div class="intro">
-                <h2>Hi, I'm Saw Sar Ka Baw Say (Edwin) - an Digital Transformer</h2>
-                <p>A graduate of bachelor of science in Physic and IT Diploma at the University Of Yangon. In every projects, I writing the codes but I don't understand them :-) </p>
+                <h2>Hi, I'm Saw Sar Ka Baw Say (Edwin) - A Digital Transformer</h2>
+                <p>A graduate of bachelor of science in Physic and IT Diploma at the University Of Yangon. In every projects, I writing the codes but I don't understand them :-) <p>Whatever I delivery the projects to the users, always make as Simplification, Quality Development, Substainable Design. The background reasons are belows...</p> </p>
               </div>
 
               <div class="skills-grid">
@@ -206,7 +206,7 @@
                   <div class="skill-icon">
                     <i class="bi bi-code-slash"></i>
                   </div>
-                  <h4>Development</h4>
+                  <h4>Quality Development</h4>
                   <p>Strong IT Infrastructure is essential for supporting business growth, ensuring redundancy and enhancing data security. </p>
                 </div>
                 <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
@@ -601,7 +601,7 @@
       <!-- Section Title -->
       <div class="container section-title">
         <h2>Testimonials</h2>
-        <p>How my collegues voice to me... </p>
+        <p>How my colleagues voice to me... </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
