--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
   }  
 }
 </script>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-434RKD0R8Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-434RKD0R8Z');
+</script>
+  
 </head>
 
 <body class="index-page">
