--- a/index.html
+++ b/index.html
@@ -732,13 +732,14 @@
                         <i class="bi bi-star-fill"></i>
                       </div>
                       <p>
-                        Saw Sar Ka Baw Say, known to all of us as Edwin, is an exceptional local IT manager whose contributions have been invaluable to our organization. His role in supporting affiliate IT matters across both the Pharmaceutical and Diagnostics divisions has been critical to our operational success. What truly sets Edwin apart is his collaborative nature and unwavering approachability. He consistently demonstrates a willingness to work with all parties, acting as a trusted and effective liaison between our diverse teams. His ability to handle the unique IT needs of two distinct divisions, while maintaining a cooperative and supportive demeanor, is a testament to his expertise and professionalism. Edwin is more than just a skilled manager; he is a true team player who is always there to lend a hand. His positive attitude and proactive problem-solving have made him a highly respected and essential member of our team.
+                        Saw Sar Ka Baw Say, known to all of us as Edwin, is an exceptional local IT manager whose contributions have been invaluable to our organization. 
+His role in supporting affiliate IT matters across both the Pharmaceutical and Diagnostics divisions has been critical to our operational success. What truly sets Edwin apart is his collaborative nature and unwavering approachability. He consistently demonstrates a willingness to work with all parties, acting as a trusted and effective liaison between our diverse teams. His ability to handle the unique IT needs of two distinct divisions, while maintaining a cooperative and supportive demeanor, is a testament to his expertise and professionalism. Edwin is more than just a skilled manager; he is a true team player who is always there to lend a hand. His positive attitude and proactive problem-solving have made him a highly respected and essential member of our team.
                       </p>
                       <div class="testimonial-profile">
                         <img src="assets/img/person/person-m-2.webp" alt="Reviewer" class="img-fluid rounded-circle">
                         <div>
                           <h3>George Sithu Han</h3>
-                          <h4>APAC ASPIRE SME, Malaysia </h4>
+                          <h4>APAC Procurement ASPIRE SME, Malaysia | george.sithu_han@roche.com </h4>
                         </div>
                       </div>
                     </div>
