--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ His role in supporting affiliate IT matters across both the Pharmaceutical and D
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Updated on <a> September 2025 </a>
+        Updated on <a> September 23rd, 2025 </a>
       </div>
     </div>
 
