--- a/index.html
+++ b/index.html
@@ -916,7 +916,8 @@ His role in supporting affiliate IT matters across both the Pharmaceutical and D
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-
+        
+<script src="//code.tidio.co/g58nqfkvfudszfeangvnwdqv4iklattw.js" async></script>
 </body>
 
 </html>
