--- a/index.html
+++ b/index.html
@@ -755,13 +755,15 @@ His role in supporting affiliate IT matters across both the Pharmaceutical and D
                         <i class="bi bi-star-fill"></i>
                       </div>
                       <p>
-                        TBC.
+                        "Ko Saw Sar Ka Baw Baw Say aka Edwin is an incredible IT partner on our local digital automation projects. I want to express my sincere appreciation for Edwin's guidance on our  wide range of Appsheet projects designed to streamline our team's operations. When we were uncertain about the best approach, he was instrumental in helping me think through the process and ideate solutions.
+
+Instead of simply building the apps for us, he partnered with me every step of the way. This approach transformed the project into an invaluable learning experience, empowering me with the knowledge and confidence to tackle similar challenges in the future. Edwin's expertise and his dedication to uplifting his teammates make him a tremendous asset to any team."
                       </p>
                       <div class="testimonial-profile">
                         <img src="assets/img/person/person-f-3.webp" alt="Reviewer" class="img-fluid rounded-circle">
                         <div>
-                          <h3>P3</h3>
-                          <h4>TBC</h4>
+                          <h3>Kyway Wuit Hmone</h3>
+                          <h4>Customer Services Support, Myanmar | kyway_wuit.hmone@roche.com </h4>
                         </div>
                       </div>
                     </div>
