--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ Instead of simply building the apps for us, he partnered with me every step of t
                         <img src="assets/img/person/person-f-3.webp" alt="Reviewer" class="img-fluid rounded-circle">
                         <div>
                           <h3>Kyway Wuit Hmone</h3>
-                          <h4>Customer Services Support, Myanmar | kyway_wuit.hmone@roche.com </h4>
+                          <h4>Customer Services, Myanmar | kyway_wuit.hmone@roche.com </h4>
                         </div>
                       </div>
                     </div>
