--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@ Instead of simply building the apps for us, he partnered with me every step of t
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Updated on <a> September 23rd, 2025 </a>
+        Updated on <a> September 25th, 2025 </a>
       </div>
     </div>
 
