--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ Instead of simply building the apps for us, he partnered with me every step of t
                         <i class="bi bi-star-fill"></i>
                       </div>
                       <p>
-                        I had the opportunity to work closely with Saw Sar Ka Baw Say aka Edwin at Roche and was consistently impressed by his contributions as a colleague. He is a proactive problem-solver who regularly takes the initiative to support his teammates. A key strength of his is the ability to foster a collaborative environment where people feel comfortable discussing challenges openly, which was instrumental to our team's success.
+                        I had the opportunity to work closely with Saw Sar Ka Baw Say also known as Edwin at Roche and was consistently impressed by his contributions as a colleague. He is a proactive problem-solver who regularly takes the initiative to support his teammates. A key strength of his is the ability to foster a collaborative environment where people feel comfortable discussing challenges openly, which was instrumental to our team's success.
 
 Furthermore, when a problem required outside expertise, he proved to be highly resourceful in connecting the team with the right individuals for a swift resolution. Beyond his technical capabilities, his strong interpersonal skills and approachable nature make him an effective and reliable team member who builds genuine working relationships. He is a true asset to any team he joins.
                       </p>
