--- a/index.html
+++ b/index.html
@@ -631,9 +631,15 @@
                       <i class="bi bi-star-fill"></i>
                       <i class="bi bi-star-fill"></i>
                     </div>
-                    <p>To be upload soon.</p>
+                    <p>Saw Sar Ka Baw Say (Edwin) is an essential IT partner who consistently goes above and beyond the typical support role.
+
+On the professional side, his commitment to keeping our IT systems running smoothly is unwavering, providing the reliable foundation we need for our daily operations. When issues arise, he is the expert we trust to resolve them quickly and effectively, minimizing downtime and maintaining productivity.
+
+What truly sets him apart, however, is his proactive and forward-looking approach. By regularly sharing updates on emerging IT technologies and AI, he doesn't just support our existing workflow—he actively helps us transform our way of working. His insights have been instrumental in enabling our team to harness game changing new tools, leading to a significant and noticeable boost in day-to-day productivity across our organization.
+
+I highly recommend Saw Sar Ka Baw Say (Edwin) as a dedicated, reliable, and visionary IT business partner.</p>
                     <div class="critic-info">
-                      <div class="critic-name">Person-1</div>
+                      <div class="critic-name">Dr.Myat Thu | Country Medical Director | myat.thu@roche.com </div>
                     </div>
                   </div>
                 </div>
@@ -897,7 +903,7 @@ Furthermore, when a problem required outside expertise, he proved to be highly r
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Updated on <a> September 25th, 2025 </a>
+        Updated on <a> October 2nd, 2025 </a>
       </div>
     </div>
 
