--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <div class="journey-timeline" data-aos="fade-up" data-aos-delay="300">
                 <div class="timeline-item">
                   <div class="year">2025</div>
-                  <div class="description">Cisco Certified Network Associate (CCNA - Routing,Switch & Wireless, Security)  </div>
+                  <div class="description">Cisco Certified Network Associate (CCNA - Routing,Switching & Wireless, Security)  </div>
                 </div>
                 <div class="timeline-item">
                   <div class="year">2023</div>
