--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@ Furthermore, when a problem required outside expertise, he proved to be highly r
             </div>
             <div class="content">
               <h4>Email Address</h4>
-              <p>saw_sar_ka_baw.say@roche.com (Work) </p>
+              <p> private (Work) </p>
               <p>alvin.say.2017@gmail.com (Personal) </p>
             </div>
           </div>
