--- a/index.html
+++ b/index.html
@@ -330,6 +330,19 @@
                     <p>Managing the Servers,Firewalls and ERP system with led Three IT helpdesk professionals.</p>
                   </div>
                 </div>
+
+                <div class="experience-card" data-aos="zoom-in" data-aos-delay="500">
+            <div class="card-header">
+              <div class="role-info">
+                <h3>Jr. Network Engineer</h3>
+                <h4>Datalink Myanmar Ltd </h4>
+              </div>
+              <span class="duration">2017 - 2018</span>
+            </div>
+            <div class="card-body">
+              <p>Primarily field-based, focusing on the on-site installation fiber optic networks and enterprise wireless solutions, providing with multi-vendor hardware and client-facing technical operations to the business customers.</p>
+            </div>
+          </div>
               </div>
             </div>
           </div>
@@ -903,7 +916,7 @@ Furthermore, when a problem required outside expertise, he proved to be highly r
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Updated on <a> October 2nd, 2025 </a>
+        v.0.1.241 Code updated on <a> October 9th, 2025 </a>
       </div>
     </div>
 
