--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                   <div class="card-header">
                     <div class="role-info">
                       <h3>IT Infrastructure Lead</h3>
-                      <h4>Roche (www.roche.com) </h4>
+                      <h4>Roche </h4>
                     </div>
                     <span class="duration">2021 - Present</span>
                   </div>
@@ -309,7 +309,7 @@
                   <div class="card-header">
                     <div class="role-info">
                       <h3>IT Infrastructure Specialist</h3>
-                      <h4>Roche (www.roche.com) </h4>
+                      <h4>Roche  | www.roche.com </h4>
                     </div>
                     <span class="duration">2019 - 2021</span>
                   </div>
@@ -322,7 +322,7 @@
                   <div class="card-header">
                     <div class="role-info">
                       <h3>System Administrator</h3>
-                      <h4>QHRM (www.qhrm.io/) </h4>
+                      <h4>QHRM   | www.qhrm.io </h4>
                     </div>
                     <span class="duration">2018 - 2019</span>
                   </div>
@@ -335,7 +335,7 @@
             <div class="card-header">
               <div class="role-info">
                 <h3>Jr. Network Engineer</h3>
-                <h4>Datalink Myanmar Ltd (www.datalink.com.mm) </h4>
+                <h4>Datalink Myanmar Ltd   | www.datalink.com.mm </h4>
               </div>
               <span class="duration">2017 - 2018</span>
             </div>
